--- a/packages/saas-ui-core/tsconfig.json
+++ b/packages/saas-ui-core/tsconfig.json
@@ -1,6 +1,5 @@
 {
   "extends": "../../tsconfig.base.json",
-  "include": ["src"],
   "compilerOptions": {
     "baseUrl": ".",
     "jsx": "react-jsx",
@@ -9,8 +8,9 @@
       "#utils": ["./src/utils/index.ts"]
     }
   },
+  "include": ["src"],
   "exclude": [
-    "src/tests",
+    "node_modules",
     "**/*.spec.ts",
     "**/*.spec.tsx",
     "**/*.test.ts",
