--- a/package.json
+++ b/package.json
@@ -104,8 +104,10 @@
   },
   "resolutions": {
     "unist-util-visit": "4.0.0",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "@types/react": "19.0.12",
+    "@types/react-dom": "19.0.4",
     "@emotion/react": "11.11.1",
     "@chakra-ui/react": "3.13.0",
     "@ark-ui/react": "5.1.0"
