chore(release): 3.0.0-next.3

--- a/packages/saas-ui-modals-provider/tsconfig.json
+++ b/packages/saas-ui-modals-provider/tsconfig.json
@@ -1,11 +1,13 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
+    "rootDir": ".",
     "baseUrl": "."
   },
   "include": ["src"],
   "exclude": [
     "src/tests",
+    "node_modules",
     "**/*.spec.ts",
     "**/*.spec.tsx",
     "**/*.test.ts",
