--- a/packages/saas-ui-modals/tsconfig.json
+++ b/packages/saas-ui-modals/tsconfig.json
@@ -1,11 +1,8 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "baseUrl": ".",
-    "paths": {
-      "@saas-ui/forms/yup": ["../../packages/saas-ui-forms/yup/src"],
-      "@saas-ui/forms/zod": ["../../packages/saas-ui-forms/zod/src"]
-    }
+    "rootDir": ".",
+    "baseUrl": "."
   },
   "include": ["src"],
   "exclude": [
