--- a/packages/saas-ui-forms/package.json
+++ b/packages/saas-ui-forms/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@saas-ui/forms",
-  "version": "3.0.0-next.2",
+  "version": "3.0.0-next.3",
   "description": "Fully functional forms for Chakra UI.",
   "exports": {
     ".": {
@@ -84,7 +84,8 @@
     "@hookform/resolvers": "^4.1.3",
     "@saas-ui/core": "workspace:*",
     "@saas-ui/react": "workspace:*",
-    "react-hook-form": "^7.54.2"
+    "react-hook-form": "^7.54.2",
+    "zod": "^3.24.2"
   },
   "peerDependencies": {
     "@chakra-ui/react": "^3.2.1",
