--- a/packages/saas-ui-forms/tsconfig.json
+++ b/packages/saas-ui-forms/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "allowImportingTsExtensions": true,
+    "rootDir": ".",
+    "baseUrl": ".",
     "paths": {
       "@saas-ui/forms/zod": ["./zod/src"],
       "@saas-ui/forms/yup": ["./yup/src"]
