--- a/packages/saas-ui-react/package.json
+++ b/packages/saas-ui-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@saas-ui/react",
-  "version": "3.0.0-next.2",
+  "version": "3.0.0-next.3",
   "description": "Saas UI - The React component library for startups.",
   "type": "module",
   "exports": {
@@ -30,8 +30,12 @@
     }
   },
   "imports": {
-    "#system": "./src/system",
-    "#components/*": "./src/components/*"
+    "#components/*": [
+      "./src/components/*",
+      "./src/components/*/index.ts",
+      "./dist/components/*/index.cjs",
+      "./dist/components/*/index.js"
+    ]
   },
   "main": "./dist/index.cjs",
   "module": "./dist/index.js",
