--- a/packages/saas-ui-react/tsconfig.json
+++ b/packages/saas-ui-react/tsconfig.json
@@ -16,7 +16,7 @@
     "skipLibCheck": true,
     "rootDir": ".",
     "paths": {
-      "#components/*": ["src/components/*"],
+      "#components/*": ["src/components/*", "src/components/*/index.ts"],
       "#types": ["src/types.ts"]
     }
   },
