--- a/packages/saas-ui-react/tsconfig.json
+++ b/packages/saas-ui-react/tsconfig.json
@@ -14,8 +14,7 @@
     "allowImportingTsExtensions": true,
     "rewriteRelativeImportExtensions": true,
     "strict": true,
-    "skipLibCheck": true,
-    "rootDir": "."
+    "skipLibCheck": true
   },
   "include": ["src/**/*.ts", "src/**/*.tsx"],
   "exclude": [
