--- a/packages/saas-ui-forms/package.json
+++ b/packages/saas-ui-forms/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@saas-ui/forms",
-  "version": "3.0.0-next.17",
+  "version": "3.0.0-next.19",
   "description": "Fully functional forms for Chakra UI.",
   "exports": {
     ".": {
@@ -81,10 +81,11 @@
     "url": "https://storybook.saas-ui.dev"
   },
   "dependencies": {
-    "@hookform/resolvers": "^4.1.3",
+    "@standard-schema/spec": "^1.0.0",
+    "@hookform/resolvers": "^5.0.0",
     "@saas-ui/core": "workspace:*",
     "@saas-ui/react": "workspace:*",
-    "react-hook-form": "^7.54.2",
+    "react-hook-form": "^7.55.0",
     "zod": "^3.24.2"
   },
   "peerDependencies": {
@@ -94,14 +95,9 @@
     "react-dom": ">=18.0.0"
   },
   "devDependencies": {
-    "@types/json-schema": "^7.0.15",
-    "ajv": "^8.17.1",
-    "ajv-errors": "^3.0.0",
-    "json-schema-to-ts": "^3.1.1",
     "tsd": "^0.31.2",
     "tsup": "^8.4.0",
     "typescript": "^5.8.2",
-    "yup": "^1.6.1",
     "zod": "^3.24.2"
   },
   "tsd": {
