--- a/packages/saas-ui-modals/package.json
+++ b/packages/saas-ui-modals/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@saas-ui/modals",
-  "version": "3.0.0-next.22",
+  "version": "3.0.0-next.26",
   "description": "A modal manager for Chakra UI",
   "type": "module",
   "exports": {
@@ -17,7 +17,7 @@
   "scripts": {
     "clean": "rimraf dist",
     "build": "tsup --config tsup.config.ts",
-    "lint": "eslint src --ext .ts,.tsx,.js,.jsx --config ../../.eslintrc.js",
+    "lint": "eslint src --ext .ts,.tsx,.js,.jsx --config ../../eslint.config.js",
     "lint:staged": "lint-staged --allow-empty --config ../../lint-staged.config.js",
     "typecheck": "tsc --noEmit"
   },
