chore: add chart and email demo

--- a/apps/website/tsconfig.json
+++ b/apps/website/tsconfig.json
@@ -13,6 +13,7 @@
     "jsx": "preserve",
     "jsxImportSource": "react",
     "incremental": true,
+    "allowImportingTsExtensions": true,
     "customConditions": ["sui", "sui-pro"],
     "baseUrl": ".",
     "plugins": [
