--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.1-next.62",
   "private": true,
   "scripts": {
-    "dev": "concurrently \"velite --watch\" \"next dev\"",
+    "dev": "concurrently \"velite --watch\" \"next dev --turbo --port 3020\"",
     "build": "velite --clean && next build",
     "start": "next start",
     "lint": "next lint",
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@ark-ui/react": "^5.2.0",
+    "@chakra-ui/charts": "^3.15.0",
     "@chakra-ui/react": "^3.14.0",
     "@emotion/react": "11.14.0",
     "@octokit/rest": "^21.1.1",
@@ -42,6 +43,7 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-icons": "5.5.0",
+    "recharts": "^2.15.2",
     "rehype-autolink-headings": "7.1.0",
     "rehype-slug": "6.0.0",
     "remark-directive": "4.0.0",
