--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -23,6 +23,7 @@
     "@chakra-ui/react": "^3.14.0",
     "@emotion/react": "11.14.0",
     "@octokit/rest": "^21.1.1",
+    "@radix-ui/react-navigation-menu": "^1.2.9",
     "@react-three/drei": "^10.0.5",
     "@react-three/fiber": "^9.1.0",
     "@saas-ui-pro/react": "workspace:*",
@@ -37,7 +38,7 @@
     "hastscript": "9.0.1",
     "match-sorter": "8.0.0",
     "mdast": "3.0.0",
-    "next": "15.2.3",
+    "next": "^15.3.1",
     "next-themes": "0.4.6",
     "node-fetch": "3.3.2",
     "react": "19.0.0",
