--- a/apps/palette/package.json
+++ b/apps/palette/package.json
@@ -3,8 +3,8 @@
   "version": "1.5.12",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "next dev --turbopack",
+    "build": "next build --turbopack",
     "start": "next start",
     "lint": "next lint",
     "lint:staged": "lint-staged --allow-empty --config ../../lint-staged.config.js",
@@ -14,16 +14,16 @@
     "@chakra-ui/react": "^3.3.0",
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
-    "@fontsource/inter": "^5.0.20",
+    "@fontsource/inter": "^5.2.5",
     "@saas-ui/next-workspaces": "^0.3.0",
-    "@saas-ui/palette": "workspace:*",
     "@saas-ui/react": "workspace:*",
     "@svgr/webpack": "^5.5.0",
     "@types/lodash.debounce": "^4.0.9",
     "framer-motion": "^11.3.28",
     "lodash.debounce": "^4.0.8",
-    "next": "^14.2.5",
+    "next": "^15.3.1",
     "next-seo": "^6.5.0",
+    "next-themes": "^0.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0"
