--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -43,7 +43,10 @@
     "node-fetch": "3.3.2",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-frame-component": "^5.2.7",
     "react-icons": "5.5.0",
+    "react-lorem-ipsum": "^1.4.10",
+    "react-use": "^17.6.0",
     "recharts": "^2.15.2",
     "rehype-autolink-headings": "7.1.0",
     "rehype-slug": "6.0.0",
