--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
   },
   "workspaces": [
     "apps/website",
-    "apps/compositions",
+    "apps/palette",
     "packages/storybook",
     "packages/pro/packages/*",
     "packages/saas-ui-*",
