fix: styles and context

--- a/apps/palette/package.json
+++ b/apps/palette/package.json
@@ -14,8 +14,8 @@
     "@chakra-ui/react": "^3.17.0",
     "@emotion/react": "^11.14.0",
     "@fontsource/inter": "^5.2.5",
-    "@saas-ui/next-workspaces": "^0.3.0",
-    "@saas-ui/react": "next",
+    "@saas-ui/react": "workspace:*",
+    "@saas-ui/palette": "workspace:*",
     "@svgr/webpack": "^5.5.0",
     "@types/lodash.debounce": "^4.0.9",
     "lodash.debounce": "^4.0.8",
