--- a/apps/palette/tsconfig.json
+++ b/apps/palette/tsconfig.json
@@ -1,11 +1,7 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -13,34 +9,25 @@
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
     "baseUrl": ".",
     "paths": {
-      "@/*": [
-        "src/client/*"
-      ],
-      "@saas-ui/react": [
-        "../../packages/saas-ui-react/src"
-      ]
+      "@/*": ["src/client/*"],
+      "@saas-ui/react": ["../../packages/saas-ui-react/src"],
+      "@saas-ui/react/colors": ["../../packages/saas-ui-react/src/colors.ts"],
+      "@saas-ui/palette": ["../../packages/saas-ui-palette/src"]
     },
     "incremental": true,
     "plugins": [
       {
         "name": "next"
       }
-    ]
+    ],
+    "customConditions": ["sui"]
   },
-  "include": [
-    "**/*.ts",
-    "**/*.tsx",
-    "next-env.d.ts",
-    ".next/types/**/*.ts"
-  ],
-  "exclude": [
-    "node_modules",
-    "cypress"
-  ]
+  "include": ["**/*.ts", "**/*.tsx", "next-env.d.ts", ".next/types/**/*.ts"],
+  "exclude": ["node_modules", "cypress"]
 }
