--- a/apps/v2/package.json
+++ b/apps/v2/package.json
@@ -35,7 +35,7 @@
     "@next/bundle-analyzer": "^14.2.14",
     "@octokit/rest": "^21.0.2",
     "@radix-ui/react-navigation-menu": "^1.2.1",
-    "@saas-ui-pro/react": "workspace:*",
+    "@saas-ui-pro/react": "next",
     "@saas-ui/command-bar": "workspace:^",
     "@saas-ui/file-upload": "workspace:*",
     "@saas-ui/forms": "workspace:*",
