--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -12,8 +12,7 @@
     "types:component": "pnpm tsx scripts/types/component.ts",
     "generate:composition": "pnpm tsx scripts/composition.ts",
     "generate:types": "pnpm types:ark && pnpm types:recipe && pnpm types:component",
-    "generate:icon": "pnpm tsx scripts/generate-icon.ts",
-    "prebuild": "pnpm generate:composition"
+    "generate:icon": "pnpm tsx scripts/generate-icon.ts"
   },
   "dependencies": {
     "@ark-ui/react": "^5.2.0",
