chore: fix ubild

--- a/apps/compositions/tsconfig.json
+++ b/apps/compositions/tsconfig.json
@@ -1,25 +1,21 @@
 {
   "extends": "../../tsconfig.base.json",
-  "include": [
-    "**/*.ts",
-    "**/*.tsx",
-    "../../packages/saas-ui-react/src/components/info-tip/info-tip.tsx"
-  ],
+  "include": ["**/*.ts", "**/*.tsx"],
   "compilerOptions": {
     "jsx": "react-jsx",
     "strict": true,
     "customConditions": ["sui"],
     "paths": {
-      "compositions/*": ["./src/*"],
-      "@saas-ui/react": ["../../packages/saas-ui-react/src/index.ts"],
-      "@saas-ui/react/*": ["../../packages/saas-ui-react/src/components/*"],
-      "@saas-ui/forms": ["../../packages/saas-ui-forms/src/index.ts"],
-      "@saas-ui/charts": ["../../packages/saas-ui-charts/src/index.ts"],
-      "@saas-ui/core": ["../../packages/saas-ui-core/src/index.ts"],
-      "@saas-ui/core/utils": ["../../packages/saas-ui-core/src/utils/index.ts"],
-      "@saas-ui/core/*": ["../../packages/saas-ui-core/src/components/*"],
-      "@saas-ui/assets": ["../../packages/saas-ui-assets/src/index.ts"],
-      "@saas-ui/hooks": ["../../packages/saas-ui-hooks/src/index.ts"]
+      "compositions/*": ["./src/*"]
+      // "@saas-ui/react": ["../../packages/saas-ui-react/src/index.ts"],
+      // "@saas-ui/react/*": ["../../packages/saas-ui-react/src/components/*"],
+      // "@saas-ui/forms": ["../../packages/saas-ui-forms/src/index.ts"],
+      // "@saas-ui/charts": ["../../packages/saas-ui-charts/src/index.ts"],
+      // "@saas-ui/core": ["../../packages/saas-ui-core/src/index.ts"],
+      // "@saas-ui/core/utils": ["../../packages/saas-ui-core/src/utils/index.ts"],
+      // "@saas-ui/core/*": ["../../packages/saas-ui-core/src/components/*"],
+      // "@saas-ui/assets": ["../../packages/saas-ui-assets/src/index.ts"],
+      // "@saas-ui/hooks": ["../../packages/saas-ui-hooks/src/index.ts"]
     }
   }
 }
