--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,10 +1,14 @@
 packages:
-  - 'apps/website'
-  - 'apps/compositions'
-  - 'packages/storybook'
-  - 'packages/pro/packages/*'
-  - 'packages/saas-ui-*'
-  - 'tooling/next-workspaces'
-  - 'tooling/test-utils'
-  - 'tooling/props-docs'
-  - 'tooling/storybook-addon'
+  - apps/website
+  - apps/compositions
+  - packages/storybook
+  - packages/pro/packages/*
+  - packages/saas-ui-*
+  - tooling/next-workspaces
+  - tooling/test-utils
+  - tooling/props-docs
+  - tooling/storybook-addon
+onlyBuiltDependencies:
+  - '@parcel/watcher'
+overrides:
+  '@chakra-ui/react': '3.17.0'
