--- a/packages/saas-ui-core/package.json
+++ b/packages/saas-ui-core/package.json
@@ -101,6 +101,10 @@
     "@microsoft/api-extractor": "^7.52.1",
     "jotai": "^2.12.2",
     "tsup": "^8.4.0",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "@types/react": "^19.0.12",
+    "@types/react-dom": "^19.0.4"
   }
 }
