--- a/packages/saas-ui-react/package.json
+++ b/packages/saas-ui-react/package.json
@@ -71,12 +71,12 @@
     "url": "https://storybook.saas-ui.dev"
   },
   "dependencies": {
-    "@ark-ui/react": "^5.2.0",
+    "@ark-ui/react": "^5.9.1",
     "@saas-ui/core": "workspace:*",
     "@saas-ui/hooks": "workspace:*"
   },
   "peerDependencies": {
-    "@chakra-ui/react": "^3.13.0",
+    "@chakra-ui/react": "^3.18.0",
     "@emotion/react": "^11",
     "react": ">=18",
     "react-dom": ">=18"
@@ -85,6 +85,10 @@
     "react-icons": "^5.5.0",
     "rimraf": "^6.0.1",
     "tsup": "^8.4.0",
-    "typescript": "^5.8.2"
+    "typescript": "^5.8.3",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "@types/react": "^19.0.12",
+    "@types/react-dom": "^19.0.4"
   }
 }
