--- a/apps/v2/package.json
+++ b/apps/v2/package.json
@@ -53,7 +53,7 @@
     "framer-motion": "^11.9.0",
     "github-slugger": "^2.0.0",
     "match-sorter": "^6.3.4",
-    "next": "14.2.17",
+    "next": "^15.3.2",
     "next-contentlayer2": "^0.5.3",
     "next-mdx-remote": "^4.4.1",
     "next-seo": "^6.6.0",
