--- a/packages/saas-ui-auth0/package.json
+++ b/packages/saas-ui-auth0/package.json
@@ -59,6 +59,11 @@
     "react-dom": ">=18.0.0"
   },
   "devDependencies": {
-    "@auth0/auth0-spa-js": "2.1.3"
+    "@auth0/auth0-spa-js": "2.1.3",
+    "typescript": "^5.8.3",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "@types/react": "^19.0.12",
+    "@types/react-dom": "^19.0.4"
   }
 }
