--- a/packages/saas-ui-forms/package.json
+++ b/packages/saas-ui-forms/package.json
@@ -97,8 +97,12 @@
   "devDependencies": {
     "tsd": "^0.31.2",
     "tsup": "^8.4.0",
-    "typescript": "^5.8.2",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "typescript": "^5.8.3",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "@types/react": "^19.0.12",
+    "@types/react-dom": "^19.0.4"
   },
   "tsd": {
     "directory": "tests"
