--- a/packages/saas-ui-modals/package.json
+++ b/packages/saas-ui-modals/package.json
@@ -68,6 +68,11 @@
   },
   "devDependencies": {
     "yup": "^1.6.1",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "typescript": "^5.8.3",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "@types/react": "^19.0.12",
+    "@types/react-dom": "^19.0.4"
   }
 }
