--- a/packages/saas-ui-assets/package.json
+++ b/packages/saas-ui-assets/package.json
@@ -54,6 +54,14 @@
     "react": ">=18.0.0",
     "react-dom": ">=18.0.0"
   },
+  "devDependencies": {
+    "tsup": "^8.4.0",
+    "typescript": "^5.8.3",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "@types/react": "^19.0.12",
+    "@types/react-dom": "^19.0.4"
+  },
   "storybook": {
     "title": "Saas UI",
     "url": "https://storybook.saas-ui.dev"
