--- a/apps/palette/package.json
+++ b/apps/palette/package.json
@@ -14,12 +14,13 @@
     "@chakra-ui/react": "^3.17.0",
     "@emotion/react": "^11.14.0",
     "@fontsource/inter": "^5.2.5",
-    "@saas-ui/react": "workspace:*",
     "@saas-ui/palette": "workspace:*",
+    "@saas-ui/react": "workspace:*",
     "@svgr/webpack": "^5.5.0",
     "@types/lodash.debounce": "^4.0.9",
+    "chroma-js": "^2.6.0",
     "lodash.debounce": "^4.0.8",
-    "next": "^15.3.1",
+    "next": "^15.3.2",
     "next-seo": "^6.5.0",
     "next-themes": "^0.4.6",
     "react": "^18.3.1",
