--- a/apps/palette/package.json
+++ b/apps/palette/package.json
@@ -18,6 +18,7 @@
     "@saas-ui/react": "workspace:*",
     "@svgr/webpack": "^5.5.0",
     "@types/lodash.debounce": "^4.0.9",
+    "babel-plugin-react-compiler": "19.1.0-rc.2",
     "chroma-js": "^2.6.0",
     "lodash.debounce": "^4.0.8",
     "next": "^15.3.2",
