--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.1-next.71",
   "private": true,
   "scripts": {
-    "dev": "next dev --port 3020",
+    "dev": "next dev --turbopack --port 3020",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
