better radix inspired color generation

--- a/apps/palette/package.json
+++ b/apps/palette/package.json
@@ -14,13 +14,16 @@
     "@chakra-ui/react": "^3.17.0",
     "@emotion/react": "^11.14.0",
     "@fontsource/inter": "^5.2.5",
+    "@radix-ui/colors": "^3.0.0",
     "@saas-ui/palette": "workspace:*",
     "@saas-ui/react": "workspace:*",
     "@svgr/webpack": "^5.5.0",
     "@types/lodash.debounce": "^4.0.9",
     "babel-plugin-react-compiler": "19.1.0-rc.2",
+    "bezier-easing": "^2.1.0",
     "chroma-js": "^2.6.0",
     "colorizr": "^3.0.8",
+    "colorjs.io": "^0.5.2",
     "lodash.debounce": "^4.0.8",
     "next": "^15.3.2",
     "next-seo": "^6.5.0",
