--- a/apps/website/tsconfig.json
+++ b/apps/website/tsconfig.json
@@ -24,9 +24,9 @@
     "paths": {
       "@/*": ["./*"],
       "content-collections": ["./.content-collections/generated"],
-      "compositions/*": ["../compositions/src/*"]
-      // "@saas-ui/react": ["../../packages/saas-ui-react/src/index.ts"],
-      // "@saas-ui/react/*": ["../../packages/saas-ui-react/src/components/*"],
+      "compositions/*": ["../compositions/src/*"],
+      "@saas-ui/react": ["../../packages/saas-ui-react/src/index.ts"],
+      "@saas-ui/react/*": ["../../packages/saas-ui-react/src/components/*"]
       // "@saas-ui/forms": ["../../packages/saas-ui-forms/src/index.ts"],
       // "@saas-ui/charts": ["../../packages/saas-ui-charts/src/index.ts"],
       // "@saas-ui/core": ["../../packages/saas-ui-core/src/index.ts"],
