chore: use pnpm

--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -34,7 +34,7 @@
     "@next/bundle-analyzer": "^14.2.14",
     "@octokit/rest": "^21.0.2",
     "@radix-ui/react-navigation-menu": "^1.2.1",
-    "@saas-ui-pro/react": "workspace:*",
+    "@saas-ui-pro/react": "^0.42.2",
     "@saas-ui/command-bar": "workspace:^",
     "@saas-ui/file-upload": "workspace:*",
     "@saas-ui/forms": "workspace:*",
