--- a/package.json
+++ b/package.json
@@ -27,18 +27,18 @@
     "url": "https://storybook.saas-ui.dev"
   },
   "scripts": {
-    "w": "yarn workspace",
-    "dev:web": "yarn w website dev",
-    "dev:palette": "yarn w palette-docs dev",
+    "w": "pnpm --filter",
+    "dev:web": "pnpm --filter website dev",
+    "dev:palette": "pnpm --filter palette-docs dev",
     "changelog:gen": "tsx scripts/changelog-generate.ts",
     "changelog:write": "tsx scripts/changelog-write.ts",
     "changelog:commit": "git add CHANGELOG.md && git commit -am 'docs: add changelog' && git push",
-    "changeset:next": "yarn changeset pre enter next",
-    "changeset:version": "yarn changelog:gen && changeset version",
-    "publish:next": "yarn workspaces foreach -Wp --from '@saas-ui/*' --exclude '@saas-ui/pro' --exclude '@saas-ui-pro/*' npm publish --access public --tag next",
-    "publish": "yarn workspaces foreach -Wp --from '@saas-ui/*' --exclude '@saas-ui/pro' --exclude '@saas-ui-pro/*' npm publish && yarn changeset tag",
-    "storybook": "yarn w saas-ui-storybook dev",
-    "build:storybook": "yarn w saas-ui-storybook build",
+    "changeset:next": "pnpm changeset pre enter next",
+    "changeset:version": "pnpm changelog:gen && changeset version",
+    "publish:next": "pnpm --filter '@saas-ui/*' --filter '!@saas-ui-pro/*' --filter '!@saas-ui/cli' publish --access public --tag next",
+    "publish": "pnpm --filter '@saas-ui/*' --filter '!@saas-ui-pro/*' --filter '!@saas-ui/cli' publish && pnpm changeset tag",
+    "storybook": "pnpm --filter saas-ui-storybook dev",
+    "build:storybook": "pnpm --filter saas-ui-storybook build",
     "prepare": "husky install",
     "clean": "turbo run clean",
     "test": "vitest",
@@ -47,29 +47,19 @@
     "lint": "turbo run lint",
     "lint:staged": "lint-staged --allow-empty --config lint-staged.config.js",
     "create:pkg": "hygen package chakra-component",
-    "create:block": "yarn hygen blocks new",
-    "build:web": "yarn w website build",
+    "create:block": "pnpm hygen blocks new",
+    "build:web": "pnpm --filter website build",
     "build:theme": "turbo run build --filter='./packages/saas-ui-theme'",
     "build:tokens": "chakra-cli tokens packages/saas-ui-theme/src/saas-ui/theme.ts",
     "build:packages": "turbo run build --filter='./packages/saas-ui-*' --filter='!./packages/pro/*' --concurrency=5 --continue && yarn build:tokens",
     "build:packages:force": "turbo run build --filter='./packages/saas-ui-*' --filter='!./packages/pro/*' --concurrency=5 --continue --force && yarn build:tokens",
     "watch:theme": "turbo run build --filter='./packages/saas-ui-theme' -- --watch",
     "clean:packages": "turbo run clean",
-    "build:storybook-addon": "yarn w @saas-ui/storybook-addon build",
-    "build:props-docs": "yarn typedocs && yarn w @saas-ui/props-docs build",
+    "build:storybook-addon": "pnpm --filter @saas-ui/storybook-addon build",
+    "build:props-docs": "pnpm typedocs && pnpm --filter @saas-ui/props-docs build",
     "typedocs": "tsx scripts/typedocs.ts",
     "preinstall": "rm -rf node_modules/odiff-bin"
   },
-  "workspaces": [
-    "apps/*",
-    "packages/pro/packages/*",
-    "packages/storybook",
-    "packages/saas-ui-*",
-    "tooling/next-workspaces",
-    "tooling/test-utils",
-    "tooling/props-docs",
-    "tooling/storybook-addon"
-  ],
   "devDependencies": {
     "@chakra-ui/cli": "^2.5.6",
     "@chakra-ui/react": "^2.10.4",
@@ -111,13 +101,8 @@
     "vercel-submodules": "^1.0.10",
     "vitest": "^2.1.2",
     "yup": "^1.4.0",
-    "zod": "^3.23.8"
-  },
-  "resolutions": {
-    "unist-util-visit": "4.0.0"
-  },
-  "packageManager": "yarn@4.2.2",
-  "dependencies": {
+    "zod": "^3.23.8",
     "rehype-slug": "^6.0.0"
-  }
+  },
+  "packageManager": "pnpm@10.10.0+sha512.d615db246fe70f25dcfea6d8d73dee782ce23e2245e3c4f6f888249fb568149318637dca73c2c5c8ef2a4ca0d5657fb9567188bfab47f566d1ee6ce987815c39"
 }
