--- a/packages/saas-ui-command-bar/package.json
+++ b/packages/saas-ui-command-bar/package.json
@@ -86,6 +86,8 @@
     "react-dom": ">=18.0.0"
   },
   "devDependencies": {
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "@types/react": "^18.3.23",
+    "@types/react-dom": "^18.3.2"
   }
 }
