--- a/packages/saas-ui-date-picker/package.json
+++ b/packages/saas-ui-date-picker/package.json
@@ -60,12 +60,12 @@
     "@chakra-ui/theme-tools": "^2.2.7",
     "@chakra-ui/utils": "^2.2.3",
     "@internationalized/date": "3.5.6",
-    "@react-aria/calendar": "^3.5.12",
-    "@react-aria/datepicker": "^3.11.3",
+    "@react-aria/calendar": "^3.8.3",
+    "@react-aria/datepicker": "^3.14.5",
     "@react-aria/i18n": "^3.12.3",
-    "@react-aria/interactions": "^3.22.3",
-    "@react-stately/calendar": "^3.5.5",
-    "@react-stately/datepicker": "^3.10.3",
+    "@react-aria/interactions": "^3.25.3",
+    "@react-stately/calendar": "^3.8.2",
+    "@react-stately/datepicker": "^3.14.2",
     "@saas-ui/core": "workspace:*",
     "@saas-ui/modals": "workspace:*"
   },
@@ -78,8 +78,11 @@
     "react-dom": ">=18.0.0"
   },
   "devDependencies": {
-    "@react-types/datepicker": "^3.8.3",
-    "@react-types/shared": "^3.25.0",
+    "@types/react": "^18.3.23",
+    "@types/react-dom": "^18.3.2",
+    "@react-types/datepicker": "^3.12.2",
+    "@react-types/shared": "^3.30.0",
+    "@react-types/button": "^3.12.2",
     "@saas-ui/forms": "workspace:*",
     "date-fns": "^3.6.0"
   }
