--- a/packages/saas-ui-file-upload/package.json
+++ b/packages/saas-ui-file-upload/package.json
@@ -74,6 +74,8 @@
   },
   "devDependencies": {
     "@saas-ui/forms": "workspace:*",
+    "@types/react": "^18.3.23",
+    "@types/react-dom": "^18.3.2",
     "react-icons": "^5.3.0"
   }
 }
