--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -9,3 +9,9 @@ packages:
   - tooling/storybook-addon
 onlyBuiltDependencies:
   - '@parcel/watcher'
+overrides:
+  '@react-types/button': '3.12.2'
+  '@internationalized/date': '3.8.2'
+  '@types/react': '18.3.23'
+  '@chakra-ui/react': '2.10.9'
+  'react': '18.3.1'
