--- a/packages/saas-ui-assets/package.json
+++ b/packages/saas-ui-assets/package.json
@@ -54,6 +54,10 @@
     "react": ">=18.0.0",
     "react-dom": ">=18.0.0"
   },
+  "devDependencies": {
+    "@types/react": "^18.3.23",
+    "@types/react-dom": "^18.3.2"
+  },
   "storybook": {
     "title": "Saas UI",
     "url": "https://storybook.saas-ui.dev"
