--- a/packages/saas-ui-auth-provider/package.json
+++ b/packages/saas-ui-auth-provider/package.json
@@ -56,6 +56,8 @@
     "react-dom": ">=18.0.0"
   },
   "devDependencies": {
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "@types/react": "^18.3.23",
+    "@types/react-dom": "^18.3.2"
   }
 }
