--- a/packages/saas-ui-hooks/package.json
+++ b/packages/saas-ui-hooks/package.json
@@ -59,5 +59,9 @@
   "peerDependencies": {
     "@chakra-ui/react": ">=2.9.0 <3",
     "react": ">=18.0.0"
+  },
+  "devDependencies": {
+    "@types/react": "^18.3.23",
+    "@types/react-dom": "^18.3.2"
   }
 }
