--- a/packages/saas-ui-use-hotkeys/package.json
+++ b/packages/saas-ui-use-hotkeys/package.json
@@ -60,5 +60,9 @@
   "peerDependencies": {
     "react": ">=18.0.0",
     "react-dom": ">=18.0.0"
+  },
+  "devDependencies": {
+    "@types/react": "^18.3.23",
+    "@types/react-dom": "^18.3.2"
   }
 }
