--- a/package.json
+++ b/package.json
@@ -51,8 +51,8 @@
     "build:web": "pnpm --filter website build",
     "build:theme": "turbo run build --filter='./packages/saas-ui-theme'",
     "build:tokens": "chakra-cli tokens packages/saas-ui-theme/src/saas-ui/theme.ts",
-    "build:packages": "turbo run build --filter='./packages/saas-ui-*' --filter='!./packages/pro/*' --concurrency=5 --continue && yarn build:tokens",
-    "build:packages:force": "turbo run build --filter='./packages/saas-ui-*' --filter='!./packages/pro/*' --concurrency=5 --continue --force && yarn build:tokens",
+    "build:packages": "turbo run build --filter='./packages/saas-ui-*' --filter='!./packages/pro/*' --concurrency=5 --continue && pnpm build:tokens",
+    "build:packages:force": "turbo run build --filter='./packages/saas-ui-*' --filter='!./packages/pro/*' --concurrency=5 --continue --force && pnpm build:tokens",
     "watch:theme": "turbo run build --filter='./packages/saas-ui-theme' -- --watch",
     "clean:packages": "turbo run clean",
     "build:storybook-addon": "pnpm --filter @saas-ui/storybook-addon build",
