--- a/packages/saas-ui-date-picker/package.json
+++ b/packages/saas-ui-date-picker/package.json
@@ -59,13 +59,13 @@
     "@chakra-ui/styled-system": "^2.12.1",
     "@chakra-ui/theme-tools": "^2.2.7",
     "@chakra-ui/utils": "^2.2.3",
-    "@internationalized/date": "3.5.6",
-    "@react-aria/calendar": "^3.8.3",
-    "@react-aria/datepicker": "^3.14.5",
-    "@react-aria/i18n": "^3.12.3",
-    "@react-aria/interactions": "^3.25.3",
-    "@react-stately/calendar": "^3.8.2",
-    "@react-stately/datepicker": "^3.14.2",
+    "@internationalized/date": "3.8.2",
+    "@react-aria/calendar": "3.8.3",
+    "@react-aria/datepicker": "3.14.5",
+    "@react-aria/i18n": "3.12.3",
+    "@react-aria/interactions": "3.25.3",
+    "@react-stately/calendar": "3.8.2",
+    "@react-stately/datepicker": "3.14.2",
     "@saas-ui/core": "workspace:*",
     "@saas-ui/modals": "workspace:*"
   },
