--- a/apps/palette/package.json
+++ b/apps/palette/package.json
@@ -11,7 +11,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.10.4",
+    "@chakra-ui/react": "^2.10.9",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@fontsource/inter": "^5.1.0",
@@ -30,7 +30,8 @@
     "react-icons": "^5.3.0"
   },
   "devDependencies": {
-    "@types/react": "^18.3.11",
+    "@types/react": "^18.3.23",
+    "@types/react-dom": "^18.3.2",
     "eslint": "^8.57.1",
     "eslint-config-next": "^14.2.14",
     "typescript": "^5.6.2"
