--- a/packages/saas-ui-charts/package.json
+++ b/packages/saas-ui-charts/package.json
@@ -38,6 +38,8 @@
     "react-dom": ">=18"
   },
   "devDependencies": {
+    "@types/react": "^18.3.23",
+    "@types/react-dom": "^18.3.2",
     "date-fns": "^3.6.0",
     "prop-types": "^15.8.1",
     "tsup": "^8.3.0"
