--- a/packages/saas-ui-core/package.json
+++ b/packages/saas-ui-core/package.json
@@ -81,6 +81,7 @@
     "url": "https://storybook.saas-ui.dev"
   },
   "dependencies": {
+    "@saas-ui/hotkeys": "workspace:*",
     "@chakra-ui/styled-system": "^2.12.1",
     "@chakra-ui/theme-tools": "^2.2.7",
     "@chakra-ui/utils": "^2.2.3",
@@ -100,6 +101,8 @@
     "react-dom": ">=18"
   },
   "devDependencies": {
-    "tsup": "^8.3.0"
+    "tsup": "^8.3.0",
+    "@types/react": "^18.3.23",
+    "@types/react-dom": "^18.3.2"
   }
 }
