--- a/packages/saas-ui-hotkeys/package.json
+++ b/packages/saas-ui-hotkeys/package.json
@@ -69,5 +69,9 @@
     "framer-motion": ">=6.0.0",
     "react": ">=18.0.0",
     "react-dom": ">=18.0.0"
+  },
+  "devDependencies": {
+    "@types/react": "^18.3.23",
+    "@types/react-dom": "^18.3.2"
   }
 }
