--- a/packages/saas-ui-core/package.json
+++ b/packages/saas-ui-core/package.json
@@ -81,7 +81,7 @@
     "url": "https://storybook.saas-ui.dev"
   },
   "dependencies": {
-    "@saas-ui/hotkeys": "workspace:*",
+    "@saas-ui/hooks": "workspace:*",
     "@chakra-ui/styled-system": "^2.12.1",
     "@chakra-ui/theme-tools": "^2.2.7",
     "@chakra-ui/utils": "^2.2.3",
