--- a/packages/saas-ui-charts/package.json
+++ b/packages/saas-ui-charts/package.json
@@ -32,16 +32,16 @@
     "recharts": "^2.13.0"
   },
   "peerDependencies": {
-    "@chakra-ui/react": ">=2.9.0 <3",
+    "@chakra-ui/react": "2.10.9",
     "@emotion/react": ">=11",
-    "react": ">=18",
+    "react": "18.3.1",
     "react-dom": ">=18"
   },
   "devDependencies": {
-    "@types/react": "^18.3.23",
+    "@types/react": "18.3.23",
     "@types/react-dom": "^18.3.2",
     "date-fns": "^3.6.0",
     "prop-types": "^15.8.1",
-    "tsup": "^8.3.0"
+    "tsup": "^8.5.0"
   }
 }
