--- a/packages/saas-ui-react/package.json
+++ b/packages/saas-ui-react/package.json
@@ -67,11 +67,11 @@
     "@saas-ui/theme": "workspace:*"
   },
   "peerDependencies": {
-    "@chakra-ui/react": ">=2.9.0 <3",
+    "@chakra-ui/react": "2.10.9",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "framer-motion": ">=5.5.0",
-    "react": ">=18",
+    "react": "18.3.1",
     "react-dom": ">=18"
   }
 }
