--- a/apps/palette/package.json
+++ b/apps/palette/package.json
@@ -11,7 +11,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.10.9",
+    "@chakra-ui/react": "2.10.9",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@fontsource/inter": "^5.1.0",
@@ -23,14 +23,14 @@
     "@types/lodash.debounce": "^4.0.9",
     "framer-motion": "^11.9.0",
     "lodash.debounce": "^4.0.8",
-    "next": "^14.2.17",
+    "next": "^14.2.30",
     "next-seo": "^6.6.0",
-    "react": "^18.3.1",
+    "react": "18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0"
   },
   "devDependencies": {
-    "@types/react": "^18.3.23",
+    "@types/react": "18.3.23",
     "@types/react-dom": "^18.3.2",
     "eslint": "^8.57.1",
     "eslint-config-next": "^14.2.14",
