--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
   },
   "devDependencies": {
     "@chakra-ui/cli": "^2.5.6",
-    "@chakra-ui/react": "^2.10.9",
+    "@chakra-ui/react": "2.10.9",
     "@changesets/cli": "^2.27.9",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
@@ -88,21 +88,21 @@
     "lodash": "^4.17.21",
     "node-releases": "^2.0.18",
     "prettier": "^3.3.3",
-    "react": "^18.3.1",
+    "react": "18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-is": "^18.3.1",
     "react-test-renderer": "^18.3.1",
+    "rehype-slug": "^6.0.0",
     "rimraf": "^4.4.1",
-    "tsup": "^8.3.0",
+    "tsup": "^8.5.0",
     "tsx": "^4.19.1",
     "turbo": "2.1.3",
     "typescript": "^5.6.2",
     "vercel-submodules": "^1.0.10",
     "vitest": "^2.1.2",
     "yup": "^1.4.0",
-    "zod": "^3.23.8",
-    "rehype-slug": "^6.0.0"
+    "zod": "^3.23.8"
   },
   "packageManager": "pnpm@10.12.1+sha512.f0dda8580f0ee9481c5c79a1d927b9164f2c478e90992ad268bbb2465a736984391d6333d2c327913578b2804af33474ca554ba29c04a8b13060a717675ae3ac"
 }
