--- a/packages/saas-ui-assets/package.json
+++ b/packages/saas-ui-assets/package.json
@@ -51,11 +51,11 @@
     "library"
   ],
   "peerDependencies": {
-    "react": ">=18.0.0",
+    "react": "18.3.1",
     "react-dom": ">=18.0.0"
   },
   "devDependencies": {
-    "@types/react": "^18.3.23",
+    "@types/react": "18.3.23",
     "@types/react-dom": "^18.3.2"
   },
   "storybook": {
