--- a/packages/saas-ui-auth-provider/package.json
+++ b/packages/saas-ui-auth-provider/package.json
@@ -52,12 +52,12 @@
     "url": "https://storybook.saas-ui.dev"
   },
   "peerDependencies": {
-    "react": ">=18.0.0",
+    "react": "18.3.1",
     "react-dom": ">=18.0.0"
   },
   "devDependencies": {
-    "typescript": "^5.6.3",
-    "@types/react": "^18.3.23",
-    "@types/react-dom": "^18.3.2"
+    "@types/react": "18.3.23",
+    "@types/react-dom": "^18.3.2",
+    "typescript": "^5.6.3"
   }
 }
