--- a/packages/saas-ui-auth0/package.json
+++ b/packages/saas-ui-auth0/package.json
@@ -60,7 +60,7 @@
   },
   "peerDependencies": {
     "@auth0/auth0-spa-js": "^2.1.3",
-    "react": ">=18.0.0",
+    "react": "18.3.1",
     "react-dom": ">=18.0.0"
   },
   "devDependencies": {
