--- a/packages/saas-ui-clerk/package.json
+++ b/packages/saas-ui-clerk/package.json
@@ -61,7 +61,7 @@
     "@saas-ui/auth-provider": "workspace:*"
   },
   "peerDependencies": {
-    "react": ">=18.0.0",
+    "react": "18.3.1",
     "react-dom": ">=18.0.0"
   }
 }
