--- a/packages/saas-ui-core/package.json
+++ b/packages/saas-ui-core/package.json
@@ -81,28 +81,28 @@
     "url": "https://storybook.saas-ui.dev"
   },
   "dependencies": {
-    "@saas-ui/hooks": "workspace:*",
     "@chakra-ui/styled-system": "^2.12.1",
     "@chakra-ui/theme-tools": "^2.2.7",
     "@chakra-ui/utils": "^2.2.3",
     "@react-aria/interactions": "^3.22.3",
     "@react-aria/utils": "^3.25.3",
+    "@saas-ui/hooks": "workspace:*",
     "@saas-ui/react-utils": "workspace:*",
     "@saas-ui/theme": "workspace:*",
     "@zag-js/dom-event": "^0.73.1",
     "@zag-js/dom-utils": "^0.2.4"
   },
   "peerDependencies": {
-    "@chakra-ui/react": ">=2.9.0 <3",
+    "@chakra-ui/react": "2.10.9",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "framer-motion": ">=5.5.0",
-    "react": ">=18",
+    "react": "18.3.1",
     "react-dom": ">=18"
   },
   "devDependencies": {
-    "tsup": "^8.3.0",
-    "@types/react": "^18.3.23",
-    "@types/react-dom": "^18.3.2"
+    "@types/react": "18.3.23",
+    "@types/react-dom": "^18.3.2",
+    "tsup": "^8.5.0"
   }
 }
