--- a/packages/saas-ui-file-upload/package.json
+++ b/packages/saas-ui-file-upload/package.json
@@ -65,16 +65,16 @@
     "@zag-js/react": "^0.73.1"
   },
   "peerDependencies": {
-    "@chakra-ui/react": ">=2.9.0 <3",
+    "@chakra-ui/react": "2.10.9",
     "@emotion/react": ">=11",
     "@emotion/styled": ">=11",
     "framer-motion": ">=6",
-    "react": ">=18.0.0",
+    "react": "18.3.1",
     "react-dom": ">=18.0.0"
   },
   "devDependencies": {
     "@saas-ui/forms": "workspace:*",
-    "@types/react": "^18.3.23",
+    "@types/react": "18.3.23",
     "@types/react-dom": "^18.3.2",
     "react-icons": "^5.3.0"
   }
