--- a/packages/saas-ui-forms/package.json
+++ b/packages/saas-ui-forms/package.json
@@ -107,22 +107,22 @@
     "react-hook-form": "^7.53.0"
   },
   "peerDependencies": {
-    "@chakra-ui/react": ">=2.9.0 <3",
+    "@chakra-ui/react": "2.10.9",
     "@emotion/react": ">=11.0.0",
     "@emotion/styled": ">=11.0.0",
     "framer-motion": ">=6.0.0",
-    "react": ">=18.0.0",
+    "react": "18.3.1",
     "react-dom": ">=18.0.0"
   },
   "devDependencies": {
     "@types/json-schema": "^7.0.15",
-    "@types/react": "^18.3.23",
+    "@types/react": "18.3.23",
     "@types/react-dom": "^18.3.2",
     "ajv": "^8.17.1",
     "ajv-errors": "^3.0.0",
     "json-schema-to-ts": "^2.12.0",
     "tsd": "^0.31.2",
-    "tsup": "^8.3.0",
+    "tsup": "^8.5.0",
     "typescript": "^5.6.2",
     "yup": "^1.4.0",
     "zod": "^3.23.8"
