--- a/packages/saas-ui-nprogress/package.json
+++ b/packages/saas-ui-nprogress/package.json
@@ -61,15 +61,15 @@
     "@tanem/react-nprogress": "^5.0.51"
   },
   "peerDependencies": {
-    "@chakra-ui/react": ">=2.9.0 <3",
+    "@chakra-ui/react": "2.10.9",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "framer-motion": ">=5.5.0",
-    "react": ">=18.0.0",
+    "react": "18.3.1",
     "react-dom": ">=18.0.0"
   },
   "devDependencies": {
-    "@types/react": "^18.3.23",
+    "@types/react": "18.3.23",
     "@types/react-dom": "^18.3.2"
   }
 }
