--- a/packages/saas-ui-react-utils/package.json
+++ b/packages/saas-ui-react-utils/package.json
@@ -59,11 +59,11 @@
     "@chakra-ui/utils": "^2.2.3"
   },
   "peerDependencies": {
-    "@chakra-ui/react": ">=2.9.0 <3",
-    "react": ">=18.0.0"
+    "@chakra-ui/react": "2.10.9",
+    "react": "18.3.1"
   },
   "devDependencies": {
-    "@types/react": "^18.3.23",
+    "@types/react": "18.3.23",
     "@types/react-dom": "^18.3.2"
   }
 }
