--- a/packages/saas-ui-system/package.json
+++ b/packages/saas-ui-system/package.json
@@ -62,9 +62,9 @@
     "react-fast-compare": "^3.2.2"
   },
   "peerDependencies": {
-    "@chakra-ui/react": ">=2.9.0 <3",
+    "@chakra-ui/react": "2.10.9",
     "@emotion/react": ">=11",
     "@emotion/styled": ">=11",
-    "react": ">=18.0.0"
+    "react": "18.3.1"
   }
 }
