--- a/packages/saas-ui-use-hotkeys/package.json
+++ b/packages/saas-ui-use-hotkeys/package.json
@@ -58,11 +58,11 @@
     "url": "https://storybook.saas-ui.dev"
   },
   "peerDependencies": {
-    "react": ">=18.0.0",
+    "react": "18.3.1",
     "react-dom": ">=18.0.0"
   },
   "devDependencies": {
-    "@types/react": "^18.3.23",
+    "@types/react": "18.3.23",
     "@types/react-dom": "^18.3.2"
   }
 }
