--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -12,7 +12,7 @@
     "@babel/preset-env": "^7.25.7",
     "@babel/preset-react": "^7.25.7",
     "@babel/preset-typescript": "^7.25.7",
-    "@chakra-ui/react": "^2.10.9",
+    "@chakra-ui/react": "2.10.9",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@saas-ui/react": "workspace:*",
@@ -31,7 +31,7 @@
     "@swc/core": "^1.7.28",
     "@vitejs/plugin-react": "^4.3.2",
     "framer-motion": "^11.9.0",
-    "react": "^18.3.1",
+    "react": "18.3.1",
     "react-dom": "^18.3.1",
     "typescript": "^5.6.2",
     "vite": "^5.4.8"
