--- a/tooling/storybook-addon/package.json
+++ b/tooling/storybook-addon/package.json
@@ -64,15 +64,15 @@
   },
   "homepage": "https://github.com/saas-ui/saas-ui#readme",
   "devDependencies": {
-    "@chakra-ui/react": "^2.10.9",
+    "@chakra-ui/react": "2.10.9",
     "@emotion/react": ">=11.1.5",
     "@emotion/styled": ">=11.1.5",
     "@saas-ui/react": "workspace:*",
     "@saas-ui/theme-glass": "workspace:*",
     "@storybook/types": "^8.3.5",
     "framer-motion": "^11.9.0",
-    "react": "^18.3.1",
-    "tsup": "^8.3.0"
+    "react": "18.3.1",
+    "tsup": "^8.5.0"
   },
   "dependencies": {
     "@storybook/components": "^8.3.5",
@@ -80,13 +80,13 @@
     "@storybook/preview-api": "^8.3.5"
   },
   "peerDependencies": {
-    "@chakra-ui/react": ">=2.0.0 <3",
+    "@chakra-ui/react": "2.10.9",
     "@saas-ui/react": ">=2.11.4",
     "@storybook/components": ">=8.0.0",
     "@storybook/manager-api": ">=8.0.0",
     "@storybook/preview-api": ">=8.0.0",
     "@storybook/types": ">=8.0.0",
-    "react": ">=18.x",
+    "react": "18.3.1",
     "react-dom": ">=18.x"
   },
   "publishConfig": {
